--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.trubeacon.orderdisplay"
+        applicationId "com.trubeacon.orderdisplaypremium"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 2
@@ -37,7 +37,6 @@ android {
         exclude 'META-INF/LGPL2.1'
     }
 }
-
 
 
 dependencies {
